# fastapi-template

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: code-quality-specialist.md  python-developer.md  python-tester.md  test-spec-analyzer.md
.claude/commands/: code-quality.md  code-review.md  create-tests.md  document.md
.claude/skills/test-analysis/: skill.md
.devcontainer/: devcontainer.json  startup.sh
.github/workflows/: integration-tests.yml  pr-checks.yml  test-docker-compose.yml  test-migrations.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  pyproject.toml
backend/.claude/: settings.local.json
backend/app/: config.py  dependencies.py  main.py  routes.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2782954157ee_create_users_table.py  d53baa2d1ef4_create_api_keys_table.py
backend/app/core/auth/: README.md  __init__.py  config.py  dependencies.py  endpoints.py  exceptions.py  protocols.py  services.py  setup.py  signature_utils.py  tokens.py
backend/app/core/auth/providers/: __init__.py  base.py  registry.py  types.py
backend/app/core/auth/providers/api_key/: __init__.py  config.py  dependencies.py  exceptions.py  factory.py  models.py  provider.py  repositories.py  router.py  schemas.py  services.py
backend/app/core/auth/providers/jwt/: __init__.py  config.py  endpoints.py  factory.py  provider.py  router.py  schemas.py  service.py  tokens.py
backend/app/core/auth/providers/jwt/blacklist/: __init__.py  factory.py  memory.py  protocols.py  redis.py
backend/app/core/base/: models.py
backend/app/core/base/repositories/: base.py  bulk.py  exceptions.py
backend/app/core/exceptions/: README.md  __init__.py  base.py  handlers.py  schemas.py
backend/app/core/logging/: README.md  __init__.py  config.py  constants.py  formatters.py  middleware.py  utils.py
backend/app/core/pagination/: __init__.py  dependencies.py  exceptions.py  schemas.py  validation.py
backend/app/core/ratelimit/: README.md  __init__.py  limiter.py
backend/app/core/redis/: __init__.py  client.py
backend/app/core/security/: hasher.py  password.py
backend/app/db/: initialize.py  session.py
backend/app/domains/health/: endpoints.py  schemas.py
backend/app/domains/users/: endpoints.py  exceptions.py  mixins.py  models.py  repositories.py  schemas.py  services.py
backend/scripts/: prestart.sh  run-integration-tests.sh
backend/tests/integration/: README.md  __init__.py  conftest.py
backend/tests/integration/core/auth/: __init__.py  conftest.py
backend/tests/integration/core/auth/providers/: __init__.py
backend/tests/integration/core/auth/providers/api_key/: __init__.py  conftest.py  test_authentication.py  test_endpoints.py
backend/tests/integration/core/auth/providers/jwt/: __init__.py  conftest.py  test_authentication.py  test_blacklist.py  test_endpoints.py
backend/tests/integration/core/base/repositories/: conftest.py  test_base_repository.py  test_bulk_operations_integration.py
backend/tests/integration/domains/: __init__.py
backend/tests/integration/domains/health/: __init__.py  test_endpoints.py
backend/tests/integration/domains/users/: test_endpoints.py  test_repository.py
backend/tests/unit/: conftest.py
backend/tests/unit/core/auth/: conftest.py  test_services.py  test_signature_utils.py
backend/tests/unit/core/auth/providers/: __init__.py  test_registry.py
backend/tests/unit/core/auth/providers/api_key/: conftest.py  test_provider.py  test_services.py
backend/tests/unit/core/auth/providers/jwt/: __init__.py  conftest.py  test_provider.py  test_router.py
backend/tests/unit/core/auth/providers/jwt/blacklist/: __init__.py  conftest.py  test_factory.py  test_memory.py  test_redis.py
backend/tests/unit/core/base/repositories/: conftest.py  test_base_repository.py  test_bulk_operations.py  test_decorators.py  test_errors.py
backend/tests/unit/core/ratelimit/: __init__.py  test_limiter.py
backend/tests/unit/core/security/: test_hasher.py
backend/tests/unit/domains/health/: test_endpoints.py
backend/tests/unit/domains/users/: conftest.py  test_endpoints.py  test_mixins.py  test_repositories.py  test_services.py
