[project]
name = "app"
version = "0.1.0"
description = "A simple FastAPI template using Supabase for user management and authentication."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disallow_untyped_decorators = false

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "Q",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "S",
    "PTH",
    "ISC",
    "RET",
    "SIM",
    "PT",
    "ASYNC",
    "PERF",
]
ignore = ["E501", "W505", "D100", "D104", "D107", "D401", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
]
