[project]
name = "app"
dynamic = ["version"]
description = "A FastAPI template with user management and authentication."
authors = [{ name = "Jürgen Altszeimer", email = "brokdar89@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.121.2",
    "makefun>=1.16.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=2.12.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", version_scheme = "guess-next-dev", local_scheme = "no-local-version" }

[tool.uv]
link-mode = "copy"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disallow_untyped_decorators = false
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "Q",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "S",
    "PTH",
    "ISC",
    "RET",
    "SIM",
    "PT",
    "ASYNC",
    "PERF",
]
ignore = ["E501", "W505", "D100", "D104", "D107", "D401", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy",
    "ignore::DeprecationWarning:app.core.base.repositories.bulk",
]
